# src/routes/professionalRoutes.js
@@ -5,8 +5,21 @@ const db = new dbManager();
 const Professional = require("../models/professional.js");
 const phoneRegex = new RegExp("[a-z]|[A-Z]|\\s");
 const numberRegex = new RegExp("^\\d+$");
+const phoneNumberRegex = new RegExp("^\\d{2}\\s\\d{4,5}\\s\\d{4}$");
 
 router.get("/", (req, res) => {
+  /* #swagger.parameters['filtro'] = {
+          in: "query",
+          name: "Filtro de busca",
+          required: false,
+          type: "object",
+          schema: {
+            $ref: "#/components/schemas/professional"
+          },
+          style: "form",
+          explode: true
+  }
+  */
   let args = req.query;
   if (args === undefined || Object.keys(args).length <= 0) {
     res.json(db.getDB("professional"));
@@ -15,6 +28,8 @@ router.get("/", (req, res) => {
       let value = args[key];
       if (numberRegex.test(value)) {
         args[key] = parseInt(value);
+      } else if (phoneNumberRegex.test(value)) {
+        args[key] = parseInt(value.split(" ").reduce((el, acc) => (el += acc)));
       }
     });
 
@@ -48,6 +63,17 @@ router.get("/", (req, res) => {
 });
 
 router.post("/", (req, res) => {
+  /*  #swagger.requestBody = {
+        required: true,
+        content: {
+        "application/json": {
+          schema: {
+            $ref: "#/components/schemas/professional"
+          }
+        }
+      }
+    }
+  */
   let id = db.getDB("professional").length + 1;
   let newProfessional = new Professional(
     id,
@@ -81,8 +107,10 @@ router.post("/", (req, res) => {
         .status(400)
         .send("Número de telefone inválido, utilize apenas números");
       return;
-    } else {
-      newProfessional.phoneNumber = formNum;
+    } else if (phoneNumberRegex.test(req.body.phoneNumber)) {
+      newStudent.phoneNumber = parseInt(
+        req.body.phoneNumber.split(" ").reduce((el, acc) => (el += acc)),
+      );
     }
   } else if (typeof req.body.phoneNumber === "number") {
     newProfessional.phoneNumber = req.body.phoneNumber;
@@ -155,8 +183,13 @@ router.put("/:id", (req, res) => {
             .status(400)
             .send("Número de telefone inválido, utilize apenas números");
           return;
+        } else if (phoneNumberRegex.test(req.body.phoneNumber)) {
+          newprof.phoneNumber = parseInt(
+            req.body.phoneNumber.split(" ").reduce((el, acc) => (el += acc)),
+          );
+        } else {
+          newprof.phoneNumber = formNum;
         }
-        newprof.phoneNumber = formNum;
       } else if (typeof req.body.phoneNumber === "number") {
         newprof.phoneNumber = req.body.phoneNumber;
       }
