# src/routes/studentRoutes.js
@@ -5,8 +5,21 @@ const db = new dbManager();
 const Student = require("../models/student.js");
 const phoneRegex = new RegExp("[a-z]|[A-Z]|\\s");
 const numberRegex = new RegExp("^\\d+$");
+const phoneNumberRegex = new RegExp("^\\d{2}\\s\\d{4,5}\\s\\d{4}$");
 
 router.get("/", (req, res) => {
+  /* #swagger.parameters['filtro'] = {
+          in: "query",
+          name: "Filtro de busca",
+          required: false,
+          type: "object",
+          schema: {
+            $ref: "#/components/schemas/student"
+          },
+          style: "form",
+          explode: true
+  }
+  */
   let args = req.query;
   if (args === undefined || Object.keys(args).length <= 0) {
     res.json(db.getDB("student"));
@@ -15,6 +28,8 @@ router.get("/", (req, res) => {
       let value = args[key];
       if (numberRegex.test(value)) {
         args[key] = parseInt(value);
+      } else if (phoneNumberRegex.test(value)) {
+        args[key] = parseInt(value.split(" ").reduce((el, acc) => (el += acc)));
       }
     });
 
@@ -48,6 +63,17 @@ router.get("/", (req, res) => {
 });
 
 router.post("/", (req, res) => {
+  /*  #swagger.requestBody = {
+        required: true,
+        content: {
+        "application/json": {
+          schema: {
+            $ref: "#/components/schemas/student"
+          }
+        }
+      }
+    }
+  */
   let id = db.getDB("student").length + 1;
   let newStudent = new Student(
     id,
@@ -101,6 +127,10 @@ router.post("/", (req, res) => {
         .status(400)
         .send("Número de telefone inválido, utilize apenas números");
       return;
+    } else if (phoneNumberRegex.test(req.body.phoneNumber)) {
+      newStudent.phoneNumber = parseInt(
+        req.body.phoneNumber.split(" ").reduce((el, acc) => (el += acc)),
+      );
     }
   }
 
@@ -167,8 +197,13 @@ router.put("/:id", (req, res) => {
           .status(400)
           .send("Número de telefone inválido, utilize apenas números");
         return;
+      } else if (phoneNumberRegex.test(req.body.phoneNumber)) {
+        newStudent.phoneNumber = parseInt(
+          req.body.phoneNumber.split(" ").reduce((el, acc) => (el += acc)),
+        );
+      } else {
+        newStudent.phoneNumber = req.body.phoneNumber;
       }
-      newStudent.phoneNumber = req.body.phoneNumber;
     }
     if (req.body.specialNeeds) {
       newStudent.specialNeeds = req.body.specialNeeds;
