# src/routes/teacherRoutes.js
@@ -8,8 +8,21 @@ const emailRegex = new RegExp(
 );
 const phoneRegex = new RegExp("[a-z]|[A-Z]|\\s");
 const numberRegex = new RegExp("^\\d+$");
+const phoneNumberRegex = new RegExp("^\\d{2}\\s\\d{4,5}\\s\\d{4}$");
 
 router.get("/", (req, res) => {
+  /* #swagger.parameters['filtro'] = {
+          in: "query",
+          name: "Filtro de busca",
+          required: false,
+          type: "object",
+          schema: {
+            $ref: "#/components/schemas/teacher"
+          },
+          style: "form",
+          explode: true
+  }
+  */
   let args = req.query;
   if (args === undefined || Object.keys(args).length <= 0) {
     res.json(db.getDB("teacher"));
@@ -18,6 +31,8 @@ router.get("/", (req, res) => {
       let value = args[key];
       if (numberRegex.test(value)) {
         args[key] = parseInt(value);
+      } else if (phoneNumberRegex.test(value)) {
+        args[key] = parseInt(value.split(" ").reduce((el, acc) => (el += acc)));
       }
     });
 
@@ -51,6 +66,17 @@ router.get("/", (req, res) => {
 });
 
 router.post("/", (req, res) => {
+  /*  #swagger.requestBody = {
+        required: true,
+        content: {
+        "application/json": {
+          schema: {
+            $ref: "#/components/schemas/teacher"
+          }
+        }
+      }
+    }
+  */
   let id = db.getDB("teacher").length + 1;
   let newTeacher = new Teacher(
     id,
@@ -95,6 +121,10 @@ router.post("/", (req, res) => {
         .status(400)
         .send("Número de telefone inválido, utilize apenas números");
       return;
+    } else if (phoneNumberRegex.test(req.body.phoneNumber)) {
+      newStudent.phoneNumber = parseInt(
+        req.body.phoneNumber.split(" ").reduce((el, acc) => (el += acc)),
+      );
     }
   }
   if (newTeacher.status !== "on" && newTeacher.status !== "off") {
@@ -152,8 +182,13 @@ router.put("/:id", (req, res) => {
           .status(400)
           .send("Número de telefone inválido, utilize apenas números");
         return;
+      } else if (phoneNumberRegex.test(req.body.phoneNumber)) {
+        newTeacher.phoneNumber = parseInt(
+          req.body.phoneNumber.split(" ").reduce((el, acc) => (el += acc)),
+        );
+      } else {
+        newTeacher.phoneNumber = req.body.phoneNumber;
       }
-      newTeacher.phoneNumber = req.body.phoneNumber;
     }
     if (req.body.status) {
       if (newTeacher.status !== "on" && newTeacher.status !== "off") {
